ShakeCharity/ShakeSharityApp/force-app/main/default/objects/bde__BulkDataEntry__c/bde__BulkDataEntry__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting to use with the Bulk Data Entry project</description>
    <label>BulkDataEntry</label>
</CustomObject>