ShakeCharity/ShakeSharityApp/force-app/main/default/objects/bde__BulkDataEntry__c/fields/bde__Object_Entry_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>bde__Object_Entry_Field_Set__c</fullName>
    <description>What field set are you using for the data entry section of the page.</description>
    <label>Object Entry Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>