ShakeCharity/ShakeSharityApp/force-app/main/default/objects/bde__BulkDataEntry__c/fields/bde__Object_List_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>bde__Object_List_Field_Set__c</fullName>
    <description>The field set you are using for the list on the page.</description>
    <label>Object List Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>