ShakeCharity/ShakeSharityApp/force-app/main/default/objects/bde__BulkDataEntry__c/fields/bde__Save_Batch__c.field-meta.xml
<CustomField>
    <fullName>bde__Save_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>As a batch do you want to save this batch.</description>
    <label>Save Batch</label>
    <type>Checkbox</type>
</CustomField>